syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package v1.index;
option go_package = "/v1/index";

service Service {
  rpc Create(CreateIndexRequest) returns (google.protobuf.Empty);
}

message CreateIndexRequest {
  // ID contains the index identifier. It may be generated or provided. If provided, caller must
  // support it. ID cannot be more than 256 bytes long
  string ID = 1;
  // format name. Format must exist
  string format = 2;
  // tags associated with the index. May be empty.
  repeated string tags = 3;

  bytes documentBody = 4;
}

message Index {
  string id = 1;
  string format = 2;
  repeated string tags = 3;
  google.protobuf.Timestamp createdAt = 4;
}